# halloween_video_player_looper

./: .gitignore  AGENTS.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  config.example.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
app/: video_duration.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
halloween_video_player_looper/: __init__.py  __main__.py  config.py  discovery.py  halloween_video_player_looper.py  player.py
tests/: __init__.py  conftest.py  test_config.py  test_discovery.py  test_halloween_video_player_looper.py  test_integration.py  test_player.py
